# pdf-to-markdown

./: .gitignore  README.md  main.py  md_converter.py  ocr_engine.py  pdf_parser.py  pyproject.toml  requirements.txt  watcher.py
