[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pdf-to-markdown"
version = "1.0.0"
description = "各类 PDF 转 Markdown 自动化流水线 — PDF → 文本提取/OCR → MarkItDown → Markdown"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "lanyuanyayi" },
]
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.25.0",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "pillow>=11.0.0",
    "watchdog>=6.0.0",
    "markitdown>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/lanyuanyayi/pdf-to-markdown"
Repository = "https://github.com/lanyuanyayi/pdf-to-markdown"

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]
